--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_utils.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_utils.scss
@@ -58,6 +58,12 @@ code {
 // Cards
 // ==============================================================
 
+.card-deck {
+    .card {
+        margin-bottom: $card-deck-margin * 2;
+    }
+}
+
 .card-shadow {
     box-shadow: 0 0 3px rgba(0,0,0, .1);
 }
@@ -90,32 +96,38 @@ code {
 // ==============================================================
 
 @mixin card-deck-responsive($breakpoint) {
+    $m: $card-deck-margin * 2;
     .card-deck {
         &.card-cols-#{$breakpoint}-1 .card {
             -ms-flex: 1 0 100% !important;
-            flex: 1 0 calc(100% - 1.255rem) !important;
-            max-width: calc(100% - 1.255rem);
+            flex: 1 0 calc(100% - #{$m}) !important;
+            max-width: calc(100% - #{$m});
         }
         &.card-cols-#{$breakpoint}-2 .card {
             -ms-flex: 0 0 50% !important;
-            flex: 0 0 calc(50% - 1.255rem) !important;
-            max-width: calc(50% - 1.255rem);
+            flex: 0 0 calc(50% - #{$m}) !important;
+            max-width: calc(50% - #{$m});
         }
         &.card-cols-#{$breakpoint}-3 .card { 
             -ms-flex: 0 0 33.333% !important; 
-            flex: 0 0 calc(33.333% - 1.255rem) !important;
-            max-width: calc(33.333% - 1.25rem);
+            flex: 0 0 calc(33.333% - #{$m}) !important;
+            max-width: calc(33.333% - #{$m});
         }
         &.card-cols-#{$breakpoint}-4 .card {
             -ms-flex: 0 0 25% !important;
-            flex: 0 0 calc(25% - 1.255rem) !important;
-            max-width: calc(25% - 1.255rem);
+            flex: 0 0 calc(25% - #{$m}) !important;
+            max-width: calc(25% - #{$m});
         }
         &.card-cols-#{$breakpoint}-5 .card {
             -ms-flex: 0 0 20% !important;
-            flex: 0 0 calc(20% - 1.255rem) !important;
-            max-width: calc(20% - 1.255rem);
-        }  
+            flex: 0 0 calc(20% - #{$m}) !important;
+            max-width: calc(20% - #{$m});
+        }
+        &.card-cols-#{$breakpoint}-6 .card {
+            -ms-flex: 0 0 16.666% !important;
+            flex: 0 0 calc(16.666% - #{$m}) !important;
+            max-width: calc(16.666% - #{$m});
+        }   
     }
 }
 
@@ -141,12 +153,16 @@ code {
             flex: 0 0 20% !important;
             max-width: 20%;
         }  
+        &.card-cols-#{$breakpoint}-6 .card {
+            flex: 0 0 16.666% !important;
+            max-width: 16.666%;
+        }  
     }
 }
 
 @mixin card-columns-responsive($breakpoint) {
     .card-columns {
-        @each $x in (1, 2, 3, 4, 5) {
+        @each $x in (1, 2, 3, 4, 5, 6) {
             &.card-cols-#{$breakpoint}-#{$x} {
                 column-count: #{$x};
             }
