--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_MyAccount.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_MyAccount.cshtml
@@ -3,18 +3,20 @@
     Html.AddBodyCssClass("myaccount-page");
 }
 
-@section left
-{
-	@{ Html.RenderAction("MyAccountMenu", new { selectedItem = ViewBag.PageClassToken }); }
-}
-
 <div class="page page-myaccount page-myaccount-@ViewBag.PageClassToken">
-	<div class="page-title">
-		<h1 class="h3">@ViewBag.PageTitle</h1>
-	</div>
-
 	<div class="page-body">
-		@RenderBody()
+		<div class="row">
+			<div class="col-md-4 col-lg-3">
+				@{ Html.RenderAction("MyAccountMenu", new { selectedItem = ViewBag.PageClassToken }); }
+			</div>
+			<div class="col-md-8 col-lg-9">
+				<div class="page-title pt-4 pt-md-0">
+					<h1 class="h3">@ViewBag.PageTitle</h1>
+				</div>
+
+				@RenderBody()
+			</div>
+		</div>
 	</div>
 </div>
 
