Theming: fixed some .block css

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_footer.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_footer.scss
@@ -34,7 +34,7 @@ $footer-bottom-bg:      $gray-lighter;
     margin-bottom: 1.25rem;
 }
 
-.footer-socia.btn-social {
+.footer-social .btn-social {
     display: inline-block;
     border-color: transparent !important;
     font-size: 1.2rem;
