--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.AlsoPurchased.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.AlsoPurchased.cshtml
@@ -13,7 +13,7 @@
     <div class="block-title">
         <h3>@T("Products.AlsoPurchased")</h3>
     </div>
-    <div class="block-body">
+    <div class="block-body pt-0">
 		<div class="artlist-carousel">
 			@{
 				Html.RenderPartial("Product.List", Model);
