--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -282,14 +282,18 @@ body {
 
     .block-title {
         font-size: $font-size-h3;
-        line-height: 1.3;
-        border-bottom: 1px dotted rgba(0,0,0, 0.2);
+        border-bottom: 1px solid rgba(0,0,0, 0.12);
+        padding: 0.75em 0;
 
         > * {
             // Most probably a heading tag
             margin: 0;
-            padding: 0.5em 0;
+            padding: 0;
         }
+    }
+
+    .block-body {
+        padding-top: 1rem;
     }
 
     &.block-boxed {
