--- a/src/Presentation/SmartStore.Web/Views/Customer/AddressEdit.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/AddressEdit.cshtml
@@ -13,17 +13,17 @@
 @using (Html.BeginForm())
 {
     var dataDictAddress = new ViewDataDictionary();
-    //Merge ModelState (required for validation)
+    // Merge ModelState (required for validation)
     dataDictAddress.ModelState.Merge(ViewData.ModelState);
     dataDictAddress.TemplateInfo.HtmlFieldPrefix = "Address";
     Html.RenderPartial("_CreateOrUpdateAddress", Model.Address, dataDictAddress);
 
-    <div class="form-group row">
-        <div class="col-sm-offset-3 col-sm-9">
-            <button type="submit" class="btn btn-warning">
-                <i class="fa fa-floppy-o"></i>
-                @T("Common.Save")
-            </button>
-        </div>
-    </div>
+	<div class="form-group row">
+		<div class="col">
+			<button type="submit" class="btn btn-primary btn-lg save-address-button">
+				<i class="fa fa-check"></i>
+				<span>@T("Common.Save")</span>
+			</button>
+		</div>
+	</div>
 }
