Theming: Address form

--- a/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
@@ -117,6 +117,7 @@
 					<div class="enter-address-body">
 						@{
 							var dataDictAddress = new ViewDataDictionary();
+							dataDictAddress["breakpoint"] = "sm";
 							//Merge ModelState (required for validation)
 							dataDictAddress.ModelState.Merge(ViewData.ModelState);
 							dataDictAddress.TemplateInfo.HtmlFieldPrefix = "NewAddress";
