--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.cshtml
@@ -120,11 +120,12 @@
                     {
                         <div class="enter-address-body">
                             @{
-                                var dataDictAddress = new ViewDataDictionary();
-                                //Merge ModelState (required for validation)
-                                dataDictAddress.ModelState.Merge(ViewData.ModelState);
-                                dataDictAddress.TemplateInfo.HtmlFieldPrefix = "NewAddress";
-                                Html.RenderPartial("_CreateOrUpdateAddress", Model.NewAddress, dataDictAddress);
+								var dataDictAddress = new ViewDataDictionary();
+								dataDictAddress["breakpoint"] = "sm";
+								//Merge ModelState (required for validation)
+								dataDictAddress.ModelState.Merge(ViewData.ModelState);
+								dataDictAddress.TemplateInfo.HtmlFieldPrefix = "NewAddress";
+								Html.RenderPartial("_CreateOrUpdateAddress", Model.NewAddress, dataDictAddress);
                             }
                         </div>
                         <div class="buttons">
