--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_forms.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_forms.scss
@@ -37,7 +37,7 @@ fieldset.content-group {
     }
 }
 
-.form-group > label:not(.checkbox-inline):not(.radio-inline) {
+.form-group label:not(.checkbox-inline):not(.radio-inline) {
     font-weight: 600;
 }
 
