--- a/src/Presentation/SmartStore.Web/Views/Customer/Addresses.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Addresses.cshtml
@@ -98,11 +98,11 @@
                 }
             </div>
                 
-			<div class="card-footer">
-                <a class="btn btn-secondary btn-flat btn-sm edit-address-button" href="@Url.Action("AddressEdit", new { id = address.Id })">
+			<div class="card-footer d-flex p-0">
+                <a class="btn btn-secondary btn-lg btn-flat rounded-0 edit-address-button" href="@Url.Action("AddressEdit", new { id = address.Id })">
 					<span>@T("Common.Edit")</span>
 				</a>
-                <a class="btn btn-danger btn-sm btn-flat delete-address-button" href="@Url.Action("AddressDelete", new { id = address.Id })" onclick="return confirm('@T("Common.AreYouSure")');">
+                <a class="btn btn-danger btn-lg btn-flat rounded-0 delete-address-button" href="@Url.Action("AddressDelete", new { id = address.Id })" onclick="return confirm('@T("Common.AreYouSure")');">
 					<span>@T("Common.Delete")</span>
 				</a>
             </div>
