--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/_CreateOrUpdateAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/_CreateOrUpdateAddress.cshtml
@@ -1,36 +1,36 @@
 ﻿@model AddressModel
 @using SmartStore.Web.Models.Common;
 
+@{ 
+	var breakpoint = (ViewData["breakpoint"] as string).NullEmpty() ?? "md";
+}
+
 @if (Model.CountryEnabled && Model.StateProvinceEnabled)
 {
-<script type="text/javascript">
-        $(function () {
-            $("#@Html.FieldIdFor(model => model.CountryId)").change(function () {
-                var selectedItem = $(this).val();
-                var ddlStates = $("#@Html.FieldIdFor(model => model.StateProvinceId)");
-                var statesProgress = $("#states-loading-progress");
-                statesProgress.show();
-                $.ajax({
-                    cache: false,
-                    type: "GET",
-                    url: "@(Url.Action("GetStatesByCountryId", "Country"))",
-                    data: { "countryId": selectedItem, "addEmptyStateIfRequired": "true" },
-                    success: function (data) {
-                        ddlStates.html('');
-                        $.each(data, function (id, option) {
-                            ddlStates.append($('<option></option>').val(option.id).html(option.name));
-                        });
-                        ddlStates.trigger("change");
-                        statesProgress.hide();
-                    },
-                    error: function (xhr, ajaxOptions, thrownError) {
-                        alert('Failed to retrieve states.');
-                        statesProgress.hide();
-                    }  
-                });
-            });
-        });
-</script>
+	<script type="text/javascript">
+			$(function () {
+				$("#@Html.FieldIdFor(model => model.CountryId)").change(function () {
+					var selectedItem = $(this).val();
+					var ddlStates = $("#@Html.FieldIdFor(model => model.StateProvinceId)");
+					$.ajax({
+						cache: false,
+						type: "GET",
+						url: "@(Url.Action("GetStatesByCountryId", "Country"))",
+						data: { "countryId": selectedItem, "addEmptyStateIfRequired": "true" },
+						success: function (data) {
+							ddlStates.html('');
+							$.each(data, function (id, option) {
+								ddlStates.append($('<option></option>').val(option.id).html(option.name));
+							});
+							ddlStates.trigger("change");
+						},
+						error: function (xhr, ajaxOptions, thrownError) {
+							alert('Failed to retrieve states.');
+						}  
+					});
+				});
+			});
+	</script>
 }
 @Html.HiddenFor(model => model.Id)
 
@@ -38,90 +38,57 @@
     
     @if (Model.CompanyEnabled)
     {
-        <div class="form-group row">
-            @Html.LabelFor(model => model.Company, new { @class = "col-sm-3 col-form-label control-label" + (Model.CompanyRequired ? " required" : ""), @for = "Company" })
-            <div class="col-sm-9">
-                @Html.TextBoxFor(model => model.Company, (Model.CompanyRequired ? null : new { @class = "form-control", placeholder = "Optional" }))
-                @Html.ValidationMessageFor(model => model.Company, null, new { @class = "text-danger" })
-            </div>
-        </div>
-    }
+		@Html.ControlGroupFor(model => model.Company, required: Model.CompanyRequired, breakpoint: breakpoint)
+	}
     
     <div><hr /></div>
 
-    <div class="form-group row">
-        @Html.LabelFor(model => model.FirstName, new { @class = "col-sm-3 col-form-label required", @for = "FirstName" })
-        <div class="col-sm-9">
-            @Html.TextBoxFor(model => model.FirstName, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.FirstName, null , new { @class = "text-danger" } )
-        </div>
-    </div>
+	@Html.ControlGroupFor(model => model.FirstName, required: true, breakpoint: breakpoint)
 
-    <div class="form-group row">
-        @Html.LabelFor(model => model.LastName, new { @class = "col-sm-3 col-form-label required", @for = "LastName" })
-        <div class="col-sm-9">
-            @Html.TextBoxFor(model => model.LastName, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.LastName, null, new { @class = "text-danger" })
-        </div>
-    </div>
+	@Html.ControlGroupFor(model => model.LastName, required: true, breakpoint: breakpoint)
 
     @if (Model.StreetAddressEnabled)
     {
-        <div class="form-group row">
-            @Html.LabelFor(model => model.Address1, new { @class = "col-sm-3 col-form-label" + (Model.StreetAddressRequired ? " required" : ""), @for = "Address1" })
-            <div class="col-sm-9">
-                @Html.TextBoxFor(model => model.Address1, new { placeholder = Model.StreetAddressRequired ? "" : "Optional", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Address1, null, new { @class = "text-danger" })
-            </div>
-        </div>
-    }
+		@Html.ControlGroupFor(model => model.Address1, required: Model.StreetAddressRequired, breakpoint: breakpoint)
+	}
 
     @if (Model.StreetAddress2Enabled)
     {
-        <div class="form-group row">
-            @Html.LabelFor(model => model.Address2, new { @class = "col-sm-3 col-form-label" + (Model.StreetAddress2Required ? " required" : ""), @for = "Address2" })
-            <div class="col-sm-9">
-                @Html.TextBoxFor(model => model.Address2, new { placeholder = Model.StreetAddress2Required ? "" : "Optional", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Address2, null, new { @class = "text-danger" })
-            </div>
-        </div>
-    }
+		@Html.ControlGroupFor(model => model.Address2, required: Model.StreetAddress2Required, breakpoint: breakpoint)
+	}
 
-    <div class="row form-group">
-        @if (Model.CityEnabled)
-        {
-            <div class="col-sm-6">
-                <div class="form-group row">
-                    @Html.LabelFor(model => model.City, new { @class = "col-sm-6 col-form-label" + (Model.CityRequired ? " required" : ""), @for = "City" })
-                    <div class="col-sm-6">
-                        @Html.TextBoxFor(model => model.City, new { placeholder = Model.CityRequired ? "" : "Optional", @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.City, null, new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-        }
-
-        @if (Model.ZipPostalCodeEnabled)
-        {
-            <div class="col-sm-6">
-                <div class="form-group row">
-                    @Html.LabelFor(model => model.ZipPostalCode, new { @class = "col-sm-4 text-right col-form-label" + (Model.ZipPostalCodeRequired ? " required" : ""), @for = "ZipPostalCode" })
-                    <div class="col-sm-8">
-                        @Html.TextBoxFor(model => model.ZipPostalCode, new { placeholder = Model.ZipPostalCodeRequired ? "" : "Optional", @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.ZipPostalCode, null, new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
+	@if (Model.CityEnabled || Model.ZipPostalCodeEnabled)
+	{
+		<div class="form-group row">
+			@Html.LabelFor(model => model.City, new { @class = "col-{0}-3 col-form-label".FormatInvariant(breakpoint) + (Model.CityRequired ? " required" : "") })
+			<div class="col-@breakpoint-9">
+				<div class="row sm-gutters d-flex">
+					<div class="col">
+						@Html.TextBoxFor(model => model.City, new { placeholder = Model.CityRequired ? "" : "Optional", @class = "form-control" })
+					</div>
+					@if (Model.ZipPostalCodeEnabled)
+					{
+						<div class="col col-auto">
+							@Html.LabelFor(model => model.ZipPostalCode, new { @class = "text-right col-form-label" + (Model.ZipPostalCodeRequired ? " required" : "") })
+						</div>
+						<div class="col col-auto">
+							@Html.TextBoxFor(model => model.ZipPostalCode, new { placeholder = Model.ZipPostalCodeRequired ? "" : "Optional", @class = "form-control", style = "width: 6rem" })
+						</div>
+					}
+				</div>
+				@Html.ValidationMessageFor(model => model.City)
+				@Html.ValidationMessageFor(model => model.ZipPostalCode)
+			</div>
+		</div>
+	}
 
     @if (Model.CountryEnabled)
     {
         <div class="form-group row">
-            @Html.LabelFor(model => model.CountryId, new { @class = "col-sm-3 col-form-label required", @for = "CountryId" })
-            <div class="col-sm-9">
-                @Html.DropDownListFor(model => model.CountryId, Model.AvailableCountries, new { style = "min-width:289px" })
-                @Html.ValidationMessageFor(model => model.CountryId, null, new { @class = "text-danger" })
+            @Html.LabelFor(model => model.CountryId, new { @class = "col-{0}-3 col-form-label required".FormatInvariant(breakpoint) })
+            <div class="col-@breakpoint-9">
+                @Html.DropDownListFor(model => model.CountryId, Model.AvailableCountries, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CountryId)
             </div>
         </div>
     }
@@ -129,63 +96,35 @@
     @if (Model.CountryEnabled && Model.StateProvinceEnabled)
     {
         <div class="form-group row">
-            @Html.LabelFor(model => model.StateProvinceId, new { @class = "col-sm-3 col-form-label", @for = "StateProvinceId" })
-            <div class="col-sm-9">
-                @Html.DropDownListFor(model => model.StateProvinceId, Model.AvailableStates, new { style = "min-width:289px" })
-                <span id="states-loading-progress" style="display: none;">
-                    @T("Common.Wait...")
-                    <img src='@Url.Content("~/Content/Images/ajax_loader_small.gif")' alt="@T("Common.Wait...")" />
-                </span>
-                @Html.ValidationMessageFor(model => model.StateProvinceId, null, new { @class = "text-danger" })
+            @Html.LabelFor(model => model.StateProvinceId, new { @class = "col-{0}-3 col-form-label".FormatInvariant(breakpoint) })
+            <div class="col-@breakpoint-9">
+                @Html.DropDownListFor(model => model.StateProvinceId, Model.AvailableStates, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.StateProvinceId)
             </div>
         </div>
     }
 
     <div><hr /></div>
 
-    <div class="form-group row">
-        @Html.LabelFor(model => model.Email, new { @class = "col-sm-3 col-form-label required", @for = "Email" })
-        <div class="col-sm-9">
-            @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Email, null, new { @class = "text-danger" })
-        </div>
-    </div>
+	@Html.ControlGroupFor(model => model.Email, required: true, breakpoint: breakpoint)
     
     @if (Model.ValidateEmailAddress)
     {
-        <div class="form-group row">
-            @Html.LabelFor(model => model.EmailMatch, new { @class = "col-sm-3 col-form-label required", @for = "EmailMatch" })
-            <div class="col-sm-9">
-                @Html.TextBoxFor(model => model.EmailMatch, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.EmailMatch, null, new { @class = "text-danger" })
-            </div>
-        </div>
-    }
+		@Html.ControlGroupFor(model => model.EmailMatch, required: true, breakpoint: breakpoint)
+	}
     
     @if (Model.PhoneEnabled)
     {
-        <div class="form-group row">
-            @Html.LabelFor(model => model.PhoneNumber, new { @class = "col-sm-3 col-form-label" + (Model.PhoneRequired ? " required" : ""), @for = "PhoneNumber" })
-            <div class="col-sm-9">
-                @Html.TextBoxFor(model => model.PhoneNumber, new { placeholder = Model.PhoneRequired ? "" : "Optional", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.PhoneNumber, null, new { @class = "text-danger" })
-            </div>
-        </div>
-    }
+		@Html.ControlGroupFor(model => model.PhoneNumber, required: Model.PhoneRequired, breakpoint: breakpoint)
+	}
 
     @if (Model.FaxEnabled)
     {
-        <div class="form-group row">
-            @Html.LabelFor(model => model.FaxNumber, new { @class = "col-sm-3 col-form-label" + (Model.FaxRequired ? " required" : ""), @for = "FaxNumber" })
-            <div class="col-sm-9">
-                @Html.TextBoxFor(model => model.FaxNumber, new { placeholder = Model.FaxRequired ? "" : "Optional", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.FaxNumber, null, new { @class = "text-danger" })
-            </div>
-        </div>
-    }
+		@Html.ControlGroupFor(model => model.FaxNumber, required: Model.FaxRequired, breakpoint: breakpoint)
+	}
 
     <div class="form-group row">
-        <div class="col-sm-push-3 col-sm-9 text-muted address-required-hint">
+        <div class="offset-@breakpoint-3 col-@breakpoint-9 text-muted address-required-hint">
             @T("Address.Fields.Required.Hint")
         </div>
     </div>
