--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_utils.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_utils.scss
@@ -72,6 +72,10 @@ code {
     margin-bottom:  0;
 }
 
+.card-footer .btn {
+    font-weight: 400;
+}
+
 
 // Dropdowns
 // ==============================================================
