--- a/src/Presentation/SmartStore.Web/Views/Customer/Addresses.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Addresses.cshtml
@@ -32,7 +32,7 @@
     {
         var address = Model.Addresses[i];
                     
-        <div class="card address-list-item">
+        <div class="card card-shadow address-list-item">
             <div class="card-block">
 				<h4 class="card-title">@address.FirstName @address.LastName</h4>
 
