--- a/src/Presentation/SmartStore.Web/Views/Customer/ReturnRequests.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/ReturnRequests.cshtml
@@ -10,38 +10,29 @@
 	ViewBag.PageTitle = T("Account.CustomerReturnRequests").Text;
 }
 
-@foreach (var item in Model.Items)
-{
-    <fieldset class="request-item">
-        <legend class="title">
-			@string.Format(T("Account.CustomerReturnRequests.Title").Text, item.Id, item.ReturnRequestStatus)
-		</legend>
-        <div class="info">
-            <div class="product">
-                @T("Account.CustomerReturnRequests.Item") 
-				<a href="@item.ProductUrl" title="@T("Products.Details")">@item.ProductName</a>
-                x @item.Quantity
-            </div>
-            <div class="reason">
-                @string.Format(T("Account.CustomerReturnRequests.Reason").Text, item.ReturnReason)
-            </div>
-            <div class="action">
-                @string.Format(T("Account.CustomerReturnRequests.Action").Text, item.ReturnAction)
-            </div>
-            <div class="date">
-                @string.Format(T("Account.CustomerReturnRequests.Date").Text, item.CreatedOn.ToString())
-            </div>
-            @if (!String.IsNullOrEmpty(item.Comments))
-            {
-                <div class="comments-label">
-                    @T("Account.CustomerReturnRequests.Comments")
-                </div>
-                <div class="comments">
-                    @Html.Raw(SmartStore.Core.Html.HtmlUtils.FormatText(item.Comments, false, true, false, false, false, false))
-                </div>
-            }
-        </div>
-    </fieldset>
-			
-    <div class="clear"></div>
-}
+<div class="card-deck card-cols-sm-1 return-request-grid">
+	@foreach (var item in Model.Items)
+	{
+		<div class="card card-shadow return-request-item">
+			<div class="card-block">
+				<h4 class="card-title mb-4">@string.Format(T("Account.CustomerReturnRequests.Title").Text, item.Id, item.ReturnRequestStatus)</h4>
+				<dl class="row mb-0">
+					<dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Item")</dt>
+					<dd class="col-sm-8">
+						<span>@item.Quantity x</span>
+						<a href="@item.ProductUrl" title="@T("Products.Details")">@item.ProductName</a>
+					</dd>
+					<dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Reason")</dt>
+					<dd class="col-sm-8">@item.ReturnReason</dd>
+					<dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Action")</dt>
+					<dd class="col-sm-8">@item.ReturnAction</dd>
+					<dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Date")</dt>
+					<dd class="col-sm-8">@item.CreatedOn.ToString()</dd>
+					<dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Comments")</dt>
+					<dd class="col-sm-8">@Html.Raw(SmartStore.Core.Html.HtmlUtils.FormatText(item.Comments, false, true, false, false, false, false))</dd>
+				</dl>
+			</div>
+		</div>
+	}
+</div>
+
