--- a/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
@@ -128,12 +128,12 @@
 			<div class="card-footer d-flex p-0">
 				@if (order.IsReturnRequestAllowed)
 				{
-					<a class="btn btn-secondary xbtn-lg btn-flat rounded-0" href="@Url.Action("ReturnRequest", "ReturnRequest", new { id = order.Id })" rel="nofollow">
+					<a class="btn btn-secondary btn-flat rounded-0" href="@Url.Action("ReturnRequest", "ReturnRequest", new { id = order.Id })" rel="nofollow">
 						<i class="fa fa-reply"></i>
 						<span>@T("Account.CustomerOrders.ReturnItems")</span>
 					</a>
 				}
-				<a class="btn btn-secondary xbtn-lg btn-flat rounded-0" href="@Url.Action("Details", "Order", new { id = order.Id })" rel="nofollow">
+				<a class="btn btn-secondary btn-flat rounded-0" href="@Url.Action("Details", "Order", new { id = order.Id })" rel="nofollow">
 					<i class="fa fa-list-alt"></i>
 					<span>@T("Account.CustomerOrders.OrderDetails")</span>
 				</a>
